# MeasureSoftGram-CLI

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.MD  README.md  code_of_conduct.md  junittest.xml  main.py  outhelp.txt  parser.py  pre_config.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  temp.md  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  codeql-analysis.yml  linter.yml  metrics.yml  metrics_on_tag.yml  python-publish.yml  test.yml
analytics-raw-data/: fga-eps-mds-2022-2-MeasureSoftGram-CLI-11-26-2022-17-47-19-develop.json  fga-eps-mds-2022-2-MeasureSoftGram-Front-11-30-2022-02-21-10-stage.json  fga-eps-mds-2022-2-MeasureSoftGram-Service-12-07-2022-01-06-02-develop.json  fga-eps-mds_2021-2-MeasureSoftGram-CLI-08-02-2022-00-01-old.json  test.c
env-vars/: .cli.env  .env.local  .env.production
measuresoftgram/: cli.py  create.py  jsonReader.py
new-features-tests/: R1.md
sonar-output/: output_sonar_2.json  test.txt
src/cli/: aggregate_metrics.py  available.py  cli.py  cliRunner.py  create.py  exceptions.py  getEntity.py  jsonReader.py  list.py  parsers.py  preconfig_model.json  results.py  show.py  utils.py  view.py
src/clients/: service_client.py
src/config/: settings.py  setup_log.py
src/util/: constants.py
tests/: hello_world_test.py  test_helpers.py
tests/integration/: test_help.py  test_sigint.py
tests/repo-init/: repositories_measure-soft-gram.json  repositories_visualeasy.json
tests/system/: test_analysis.py  test_available.py  test_change_name.py  test_extract.py  test_help.py  (+7 more)
(+78 files in other folders)
